# mac

./: .gitignore  CLEAN_ROOM_AUDIT.md  CLEAN_ROOM_EVIDENCE.md  CONTINUATION_MEMO_2026-07-13.md  Cargo.toml  ENGINEERING_LOG.md  EVIDENCE_MANIFEST.json  FINAL_STATUS.md  HANDOFF.md  MINI_ISA_NOTES.md  PROJECT_STATE.json  README.md  REMOTE_MACS.md  SESSION_HANDOFF_COMPLETE.md  VERIFICATION.md  appicon-vision-verify.json  apple-corrupt-output.car  atlas-fixture-scan.json  atlas-source-oracle-compare.json  atlas-token-verify.json  brandassets-target-device-tv-assetutil-summary.json  brandassets-target-device-tv-matrix.json  brandassets-target-tv-inspect.json  cbck-threshold-all-unique.json  corrupt-diagnostic.json  facet_hash_patterns_extended.json  firefox-iconstack-inspect.json  framework-symbol-audit.json  iconstack-exception-samples.json  iconstack-fixture-summary.json  iconstack-scan-summary.json  iconstack-targeted-stats.json  image-stack-info.json  interesting-car-scan-current.json  interesting-car-scan-legacy-320.json  interesting-car-scan-legacy.json  invalid-color-info.json  missing-color-info.json  option-cross-26.5.json  option-cross-all-unique.json  (+20 more)
actool/: Cargo.toml
actool/src/: main.rs
actool_rs/: Cargo.toml
actool_rs/src/: alpha_compression.rs  appicons.rs  astc_compression.rs  astc_optimized.rs  astc_optimizer.rs  atlas.rs  atlas_geometry.rs  autosafe.rs  bom.rs  bomwriter.rs  car.rs  carwriter.rs  cbck.rs  cbck_complete.rs  cli.rs  compiler.rs  csi.rs  diagnostics.rs  facet_hash_lookup.rs  iconstack.rs  imagestack.rs  legacy_coreui_features.rs  lib.rs  (+21 more)
(+549 files in other folders)
