[package]
name = "actool_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
thiserror = "2.0"
anyhow = "1.0"
image = "0.25"
flate2 = "1.0"
uuid = { version = "1.10", features = ["v4"] }

[[bin]]
name = "actool-rs"
path = "src/main.rs"

[[bin]]
name = "actool-car-info"
path = "src/bin/car_info.rs"

[[bin]]
name = "actool-car-repack"
path = "src/bin/car_repack.rs"

[[bin]]
name = "actool-pdf-car"
path = "src/bin/pdf_car.rs"

[dev-dependencies]
tempfile = "3.10"
